Fixed syntax issues

--- a/src/html/www.topmonks.com/about-us/index.html
+++ b/src/html/www.topmonks.com/about-us/index.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/application.html' %}
-{% block title %} About Us - www.topmonks.com{% endblock %}
+{% block title %} About Us - TopMonks{% endblock %}
 
 {% block navigation %}
 {% include 'shared/top-menu.html' %}
@@ -8,8 +8,6 @@
 
 {% block content %}
 {{ macros.pageHeader('About Us') }}
-
-
 
   <section id="how-we-work" class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
@@ -81,6 +79,7 @@
         </ul>
         <p>If you like these ideas, come <a href="mailto:jobs@topmonks.com">join us</a>. Or, <a href="mailto:sales@topmonks.com">have your project</a>                        delivered by us. Or, simply <a href="/contact/">visit us</a>. We enjoy meeting interesting people.</p>
       </div>
+    </div>
   </section>
 
 {% endblock %}
