--- a/src/html/www.topmonks.com/index.html
+++ b/src/html/www.topmonks.com/index.html
@@ -153,7 +153,6 @@
       </div>
     </div>
   </div>
-  </div>
 </section>
 <section class="product">
   <div class="mdc-layout-grid steps wrapper">
@@ -279,7 +278,7 @@
     <div class="mdc-layout-grid__inner">
       <div class="contact_title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Contact</h2>
-        <p clasDo you have any questions? Are you interested in working with us? Contact us.</p>
+        <p>Do you have any questions? Are you interested in working with us? Contact us.</p>
       </div>
       <div
         class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
