--- a/src/html/www.topmonks.com/meet-us/index.html
+++ b/src/html/www.topmonks.com/meet-us/index.html
@@ -10,7 +10,6 @@
 {% block content %}
   {{ macros.pageHeader('Community','Learn or die. Teach or die. Only learning and teaching brains flourish.') }}
 
-
   <section class="principles">
     <div class="mdc-layout-grid mainBody">
       <div class="mdc-layout-grid__inner">
@@ -36,7 +35,7 @@
         <h2>You can <b>meet us</b> here</h2>
       </div>
 
-      <article class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner mainBody">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://soundcloud.com/czpodcast-1">CZ Podcast</a></h3>
@@ -50,8 +49,8 @@
             <a class="img-link" href="https://soundcloud.com/czpodcast-1"><img alt="CZ Podcast logo" src="/images/community/cz-podcast.png"></a>
           </div>
         </div>
-      </article>
-      <article class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner mainBody">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://codingdojo.cz/">Coding Dojo</a></h3>
@@ -67,8 +66,8 @@
             <a class="img-link" href="http://codingdojo.cz/"><img alt="Coding Dojo logo" src="/images/community/coding-dojo.png"></a>
           </div>
         </div>
-      </article>
-      <article class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner mainBody">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://coderetreat.cz/">Code Retreat CZ</a></h3>
@@ -82,8 +81,8 @@
             <a class="img-link" href="https://coderetreat.cz/"><img alt="Code Retreat CZ logo" src="/images/community/coderetreat-cz.png"></a>
           </div>
         </div>
-      </article>
-      <article class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner mainBody">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://www.asociaceux.cz/">Asociace UX</a></h3>
@@ -97,8 +96,8 @@
             <a class="img-link" href="http://www.asociaceux.cz/"><img alt="Asociace UX logo" src="/images/community/ux-asociace.png"></a>
           </div>
         </div>
-      </article>
-      <article class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner mainBody">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="https://www.meetup.com/Lambda-Meetup-Group/">Prague Lambda</a></h3>
@@ -112,8 +111,8 @@
             <a class="img-link" href="https://www.meetup.com/Lambda-Meetup-Group/"><img alt="Prague Lambda logo" src="/images/community/prague-lambda.png"></a>
           </div>
         </div>
-      </article>
-      <article class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner mainBody">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://devminutes.cz/">DevMinutes</a></h3>
@@ -127,8 +126,8 @@
             <a class="img-link" href="http://devminutes.cz/"><img alt="DevMinutes logo" src="/images/community/devminutes.png"></a>
           </div>
         </div>
-      </article>
-      <article class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner mainBody">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
             <h3><a href="http://www.wisephora.com/">Wisephora</a></h3>
@@ -144,7 +143,8 @@
             <a class="img-link" href="http://www.wisephora.com/"><img alt="Wisephora logo" src="/images/community/wisephora.png"></a>
           </div>
         </div>
-      </article>
+      </div>
+    </div>
   </section>
 
 
