--- a/src/html/shared/footer.html
+++ b/src/html/shared/footer.html
@@ -1,5 +1,5 @@
 {%- import 'macros/helpers.html' as macros -%}
-<link rel="stylesheet" href=/stylesheets/components/footer-menu/index.css">
+<link rel="stylesheet" href="/stylesheets/components/footer-menu/index.css">
 
   <div class="nav-and-contacts">
     <div class="wrapper mdc-layout-grid">
