--- a/src/html/www.topmonks.com/contacts/index.html
+++ b/src/html/www.topmonks.com/contacts/index.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/application.html' %}
-{% block title %}Contacts - www.topmonks.com{% endblock %}
+{% block title %}Contacts - TopMonks{% endblock %}
 
 {% block navigation %}
 {% include 'shared/top-menu.html' %}
