--- a/src/html/www.topmonks.com/meet-us/index.html
+++ b/src/html/www.topmonks.com/meet-us/index.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/application.html' %}
-{% block title %}Meet Us - www.topmonks.com{% endblock %}
+{% block title %}Meet Us - TopMonks{% endblock %}
 
 {% block navigation %}
 {% include 'shared/top-menu.html' %}
