Fixed description on prodeti

--- a/src/html/prodeti.topmonks.cz/index.html
+++ b/src/html/prodeti.topmonks.cz/index.html
@@ -22,7 +22,7 @@
   <meta name="msapplication-TileColor" content="#7645C1">
   <meta name="theme-color" content="#D5E9FF">
   <meta name=description
-        content="We are your software development partners, experienced with both startup and corporate environment.">
+        content="V rámci TopMonks vzděláváme nejen sebe a IT komunitu, ale také naše děti. Na základě spokojenosti dětí i rodičů s již uspořádanými kurzy, jsme se rozhodli nabízet Programování pro děti přímo do firem.">
   <meta name="twitter:description" property="og:description"
         content="V rámci TopMonks vzděláváme nejen sebe a IT komunitu, ale také naše děti. Na základě spokojenosti dětí i rodičů s již uspořádanými kurzy, jsme se rozhodli nabízet Programování pro děti přímo do firem.">
   <link rel="canonical" href="http://prodeti.topmonks.cz/">
