--- a/src/html/www.topmonks.com/index.html
+++ b/src/html/www.topmonks.com/index.html
@@ -27,8 +27,7 @@
       </div>
       <div
         class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/topmonks.com/monk.svg">
-        <a class="pure-menu-heading menu-brand-logo active" href="/" title="Go to homepage">TopMonks </a>
+        <a class="pure-menu-heading menu-brand-logo active" href="/" title="Go to homepage"><img src="/images/topmonks.com/monk.svg">TopMonks</a>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="navigation" class="pure-menu pure-menu-horizontal menu-can-transform">
