Fotka machy - lektoři

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -303,7 +303,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
           <div class="photo">
-            <img src="/images/j.penzes.jpg" alt=" [fotografie] Jiří Penzeš">
+            <img src="/images/machy.JPG" alt=" [fotografie] Jan Macháček">
           </div>
           <div class="name">
             Jan Macháček
