--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/application.html' %}
-{% block title %}www.topmonks.cz{% endblock %}
+{% block title %}TopMonks - Tým pro váš projekt{% endblock %}
 
 {% block navigation %}
 {{ macros.navigation('topmonks.cz') }}
@@ -127,7 +127,7 @@
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                 <blockquote>
-                    <div class="monk_logo"><img src="../images/monk_logo.png"></div>
+                    <div class="monk_logo"><img src="/images/monk_logo.png"></div>
                     <p>„Spolupráce s TopMonks byla fakt boží. Spolupráce s TopMonks byla fakt boží.
                         Spolupráce s TopMonks byla naprosto boží. Spolupráce s TopMonks byla naprosto boží.“</p>
                 </blockquote>
@@ -141,7 +141,7 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                 <h3>Kontakt</h3>
                 <h4>Máte dotaz nebo zájem o spolupráci? Ozvěte se nám.</h4>
-                <div class="monk_logo"><img src="img/monk_logo.png"></div>
+                <div class="monk_logo"><img src="/images/monk_logo.png"></div>
                 <a href="mailto:info@topmonks.com">info@topmonks.com</a>
             </div>
         </div>
