--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -321,7 +321,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
           <div class="photo">
-            <img src="/images/machy.JPG" alt="[fotografie] Jan Macháček">
+            <img src="/images/machy.jpg" alt="[fotografie] Jan Macháček">
           </div>
           <div class="name">
             Jan Macháček
