Visual improvements of photo on ProDeti

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -204,7 +204,8 @@
                 method="post" target="_blank">
             <div
               class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-8-desktop">
-              <label><span class="a11y--hidden">Zadejte váši e-mailovou adresu:</span> <input type="email" name="EMAIL" placeholder="vas@email.cz"></label>
+              <label><span class="a11y--hidden">Zadejte váši e-mailovou adresu:</span> <input type="email" name="EMAIL"
+                                                                                              placeholder="vas@email.cz"></label>
             </div>
             <div
               class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
@@ -391,7 +392,8 @@
               <div class="slide">
                 <div class="inner-container">
                   <div class="photo">
-                    <img src="/images/rodice/anicka.jpg" alt="[fotografie] Anna Cihlová">
+                    <img src="/images/rodice/anicka.jpg" alt="[fotografie] Anna Cihlová"
+                         style="filter: grayscale(1.0) brightness(1.1);">
                   </div>
                   <blockquote class="description">
                     <p>Jsem jedna z&nbsp;mála žen, která se vrhla do oboru IT, proto v&nbsp;tom podporuji
@@ -408,7 +410,8 @@
               <div class="slide">
                 <div class="inner-container">
                   <div class="photo">
-                    <img src="/images/rodice/prema.jpg" alt="[fotografie] Přemysl Novák">
+                    <img src="/images/rodice/prema.jpg" alt="[fotografie] Přemysl Novák"
+                         style="filter: grayscale(1.0) brightness(1.1);">
                   </div>
                   <blockquote class="description">
                     <p>Na Kurzech pro děti se mi líbí, že celé probíhají opravdu ve hře.
