Fixed Lighthouse issues on www.topmonks.com

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -69,7 +69,7 @@
       </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
           <div class="box listen">
-            <img src="/images/listen_ic.svg">
+            <img src="/images/listen_ic.svg" alt="">
             <h3>We listen</h3>
             <p>We see the time devoted to your project as an investment into your future.
               We listen to your ideas and needs and think about the best solution to do the project right the first
@@ -78,7 +78,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
           <div class="box develop">
-            <img src="/images/develop_ic.svg">
+            <img src="/images/develop_ic.svg" alt="">
             <h3>We develop</h3>
             <p>We work with the latest technologies to get the best results. We don’t need lengthy training or
               explanations.
@@ -87,7 +87,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
           <div class="box verify">
-            <img src="/images/verify_ic.svg">
+            <img src="/images/verify_ic.svg" alt="">
             <h3>We verify</h3>
             <p>We closely examine and test every idea and every feature in every step of the project.
               We concentrate on the needs of the end user. We don’t take risks. We don’t launch anything we don’t stand
@@ -193,7 +193,7 @@
         <h2>Who works with us</h2>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/logo-clients/purposefly.png">
+        <img src="/images/logo-clients/purposefly.png" alt="[logo] PurposeFly">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
         <p>logo</p>
@@ -223,37 +223,37 @@
       </div>
       <div
         class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/sporka.jpg">
+        <img src="/images/sporka.jpg" alt="">
         <h3>Česká spořitelna</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div
         class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/pricefx.jpg">
+        <img src="/images/pricefx.jpg" alt="">
         <h3>PriceFX</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div
         class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/purposefly.jpg">
+        <img src="/images/purposefly.jpg" alt="">
         <h3>PurposeFly</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div
         class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/hearth.jpg">
+        <img src="/images/hearth.jpg" alt="">
         <h3>Hearth.net</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div
         class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/techloop.jpg">
+        <img src="/images/techloop.jpg" alt="">
         <h3>Techloop.io</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div
         class="studies--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/images/europe.jpg">
+        <img src="/images/europe.jpg" alt="">
         <h3>GoRealEurope.com</h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
@@ -289,7 +289,7 @@
       <div
         class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="person--photo">
-          <img src="/images/kristy.jpg">
+          <img src="/images/kristy.jpg" alt="[photo] Kristýna Sloupová">
         </div>
         <h4>Kristýna Sloupová</h4>
         <p>Senior Key Account Manager</p>
@@ -320,7 +320,7 @@
       <div
         class="person mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="person--photo">
-          <img src="/images/gery.jpg">
+          <img src="/images/gery.jpg" alt="[foto] Ladislav Gerencséry">
         </div>
         <h4>Ladislav Gerencséry</h4>
         <p>Sales Account Manager</p>
