--- a/www.topmonks.com/src/html/about-us/index.html
+++ b/www.topmonks.com/src/html/about-us/index.html
@@ -62,7 +62,7 @@
   </section>
   <section id="company-values" class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 wrapper">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
         <h2>Company values</h2>
         <ul>
           <li><b>导</b> Learn or die. Teach or die. Only learning and teaching brains flourish.</li>
