--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stylesheets/components/footer-menu/index.css">
 
   <div class="nav-and-contacts">
-    <div class="wrapper mdc-layout-grid">
+    <div class="tm-layout-wrapper mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h3>About</h3>
@@ -61,7 +61,7 @@
     </div>
   </div>
   <div class="copy-and-media">
-    <div class="wrapper mdc-layout-grid">
+    <div class="tm-layout-wrapper mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <p>© 2018 TopMonks, s.r.o.</p>
