--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -7,8 +7,8 @@
 
 {% block content %}
 
-<section id="uvod" class="main_info">
-    <div class="mdc-layout-grid wrapper">
+<section id="uvod" class="main-info">
+    <div class="mdc-layout-grid tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                 <h1>Tým pro váš projekt</h1>
@@ -37,7 +37,7 @@
     </div>
 </section>
 <section id="partneri" class="cooperation">
-    <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                 <h3>Kdo s námi spolupracuje</h3>
@@ -64,7 +64,7 @@
     </div>
 </section>
 <section id="nase_prace" class="how_we_work">
-    <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                 <h3>Bude vás to s námi bavit</h3>
@@ -90,7 +90,7 @@
     </div>
 </section>
 <section id="studie" class="knowledge">
-    <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                 <h3>Případové studie</h3>
@@ -120,7 +120,7 @@
     </div>
 </section>
 <section id="reference" class="review">
-    <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                 <h3>Naši zákazníci o nás říkají, že…</h3>
@@ -136,7 +136,7 @@
     </div>
 </section>
 <section id="kontakt" class="contact">
-    <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                 <h3>Kontakt</h3>
