--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -154,7 +154,7 @@
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Who works with us</h2>
+        <h2>Who works with&nbsp;us</h2>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/logo-clients/purposefly.png" alt="[logo] PurposeFly">
