--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -11,7 +11,7 @@
           Or simply <a href="/contacts/">visit us</a>. We enjoy <a href="/community/">meeting interesting people</a>.
         </p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
         <h3>Navigation</h3>
         <nav>
           <ul>
@@ -24,7 +24,7 @@
           </ul>
         </nav>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
         <h3>Contact</h3>
         <span itemprop="legalName">TopMonks, s.r.o.</span>
         <div itemprop="location" itemscope="" itemtype="https://schema.org/Place">
@@ -43,20 +43,6 @@
           <a itemprop="email" href="mailto:info@topmonks.com">info@topmonks.com</a></div>
 
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
-        <h3>Billing address</h3>
-        <span itemprop="legalName">TopMonks s.r.o.</span><br>
-        <span itemprop="foundingLocation" itemscope="" itemtype="https://schema.org/Place">
-                              <span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-                                <span itemprop="streetAddress">Jasná I. 1513/10</span><br>
-                            <span itemprop="postalCode">147 00</span>
-                            <span itemprop="addressLocality">Praha 4</span>
-                            </span>
-                            </span><br>
-        <a href="mailto:invoices@topmonks.com">invoices@topmonks.com</a>
-
-        <div>Reg. No: 24847437<br> VAT ID: <span itemprop="vatID">CZ24847437</span></div>
-      </div>
     </div>
   </div>
 </div>
@@ -64,7 +50,7 @@
   <div class="tm-layout-wrapper mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-        <p>© 2018 TopMonks s.r.o.</p>
+        <p>© 2018 TopMonks s.r.o., VAT ID: <span itemprop="vatID">CZ24847437</span></p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
         <div class="social-buttons">
