--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -116,6 +116,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h1>Kurz programování pro děti</h1>
           <ul>
+            <li>benefit pro firmy, akce pro zaměstnance</li>
             <li>pro děti od 7 do 12 let</li>
             <li>celý kurz trvá 4 týdny</li>
             <li>individuální přístup k dětem</li>
