Business claim adjusted to target the real customer

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -113,9 +113,9 @@
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <h1>Kurz programování pro děti</h1>
+          <h1>Kurz programování pro děti vašich zaměstnanců</h1>
           <ul>
-            <li>benefit pro firmy, akce pro zaměstnance</li>
+            <li>hodnotný benefit pro vaše zaměstnance</li>
             <li>pro děti od 7 do 12 let</li>
             <li>celý kurz trvá 4 týdny</li>
             <li>individuální přístup k dětem</li>
