--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -13,7 +13,7 @@
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2 class="jumbotron__title">Team as a service</h2>
-        <div class="box box--lead">
+        <div class="box box--lead box--mobile-only">
           <blockquote class="jumbotron__lead">
             <p>And they are perfectionists. Ask them to build you a product, and they will
               not give you what you asked for. They will give you what you&nbsp;want.</p>
@@ -71,55 +71,25 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-        <p>Our long-standing experience has resulted in deep, broad knowledge of the B2B world and start-up scene,
+        <p class="box box--mobile-only">Our long-standing experience has resulted in deep, broad knowledge of the B2B world and start-up scene,
           and gives us the ability to apply various technology solutions, whether they are old or new.</p>
       </div>
 
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
         <p class="box">We will bring start-up playfulness and a fresh point of view to your project.</p>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
-        <p class="box">We will guide you through and help you understand the world of IT.</p>
-      </div>
-
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <p class="box box--purple">We respect the processes. Your company, your rules.</p>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
-        <p class="box box--purple">We will help you stop worrying.</p>
-      </div>
-
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <p class="box">We are open and fair. We keep our promises.</p>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
-        <p class="box">We can anticipate and minimize the risks associated with technical IT solutions.</p>
-      </div>
-
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <p class="box box--purple">We keep educating ourselves, you, and your children.</p>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
-        <p class="box box--purple">We think in the context of your business. With our help, your product will make
-          sense
-          to your end
-          users.</p>
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+        <p class="box">We will guide you through and help you understand the world of IT.</p>
+        <p class="box box--purple">We will help you stop worrying.</p>
+        <p class="box">We can anticipate and minimize the risks associated with technical IT solutions.</p>
+        <p class="box box--purple">We think in the context of your business. With our help, your product will make sense to your end users.</p>
       </div>
     </div>
   </div>
