--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -25,15 +25,14 @@
   </div>
 </section>
 
-<section>
+<section class="how-we-work">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2><span class="box--purple">TopMonks</span></h2>
       </div>
       <div class="mdc-layout-grid__cell">
-        <div class="box listen">
-          <img src="/images/listen_ic.svg" alt="">
+        <div class="box box--listen">
           <h3>We listen</h3>
           <p>We see the time devoted to your project as an investment into your future.
             We listen to your ideas and needs and think about the best solution to do the project right the first
@@ -41,8 +40,7 @@
         </div>
       </div>
       <div class="mdc-layout-grid__cell">
-        <div class="box develop">
-          <img src="/images/develop_ic.svg" alt="">
+        <div class="box box--develop">
           <h3>We develop</h3>
           <p>We work with the latest technologies to get the best results. We don’t need lengthy training or
             explanations.
@@ -50,8 +48,7 @@
         </div>
       </div>
       <div class="mdc-layout-grid__cell">
-        <div class="box verify">
-          <img src="/images/verify_ic.svg" alt="">
+        <div class="box box--verify">
           <h3>We verify</h3>
           <p>We closely examine and test every idea and every feature in every step of the project.
             We concentrate on the needs of the end user. We don’t take risks. We don’t launch anything we don’t stand
@@ -74,18 +71,17 @@
         <p class="box box--mobile-only">Our long-standing experience has resulted in deep, broad knowledge of the B2B world and start-up scene,
           and gives us the ability to apply various technology solutions, whether they are old or new.</p>
       </div>
-
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <p class="box">We will bring start-up playfulness and a fresh point of view to your project.</p>
         <p class="box box--purple">We respect the processes. Your company, your rules.</p>
         <p class="box">We are open and fair. We keep our promises.</p>
         <p class="box box--purple">We keep educating ourselves, you, and your children.</p>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <p class="box">We will guide you through and help you understand the world of IT.</p>
         <p class="box box--purple">We will help you stop worrying.</p>
         <p class="box">We can anticipate and minimize the risks associated with technical IT solutions.</p>
