background layering finished for cooperation section

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -60,32 +60,34 @@
 </section>
 
 <section class="cooperation">
-  <div class="mdc-layout-grid tm-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>You will love working with us</h2>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-        <p class="box box--mobile-only">Our long-standing experience has resulted in deep, broad knowledge of the B2B world and start-up scene,
-          and gives us the ability to apply various technology solutions, whether they are old or new.</p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
-        <p class="box">We will bring start-up playfulness and a fresh point of view to your project.</p>
-        <p class="box box--purple">We respect the processes. Your company, your rules.</p>
-        <p class="box">We are open and fair. We keep our promises.</p>
-        <p class="box box--purple">We keep educating ourselves, you, and your children.</p>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
-        <p class="box">We will guide you through and help you understand the world of IT.</p>
-        <p class="box box--purple">We will help you stop worrying.</p>
-        <p class="box">We can anticipate and minimize the risks associated with technical IT solutions.</p>
-        <p class="box box--purple">We think in the context of your business. With our help, your product will make sense to your end users.</p>
+  <div class="bgnd-wrapper">
+    <div class="mdc-layout-grid tm-layout-wrapper">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>You will love working with us</h2>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+          <p class="box box--mobile-only">Our long-standing experience has resulted in deep, broad knowledge of the B2B world and start-up scene,
+            and gives us the ability to apply various technology solutions, whether they are old or new.</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        </div>
+        <div
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
+          <p class="box">We will bring start-up playfulness and a fresh point of view to your project.</p>
+          <p class="box box--purple">We respect the processes. Your company, your rules.</p>
+          <p class="box">We are open and fair. We keep our promises.</p>
+          <p class="box box--purple">We keep educating ourselves, you, and your children.</p>
+        </div>
+        <div
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
+          <p class="box">We will guide you through and help you understand the world of IT.</p>
+          <p class="box box--purple">We will help you stop worrying.</p>
+          <p class="box">We can anticipate and minimize the risks associated with technical IT solutions.</p>
+          <p class="box box--purple">We think in the context of your business. With our help, your product will make sense to your end users.</p>
+        </div>
       </div>
     </div>
   </div>
