product section background and texts updated

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -97,23 +97,23 @@
     <div class="mdc-layout-grid__inner">
       <div
         class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-        <h3>Research</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
+        <h3>Customer care</h3>
+        <p>Throughout cooperation, we make sure that you have access to the project's updates and news. We will assign you a person who will always explain everything to you and find the right solution for you.</p>
       </div>
       <div
         class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+        <h3>Planning and Research</h3>
+        <p>We are exploring market opportunities and verifying both, our and your ideas. The product and its development are not based on feelings but on data and experience.</p>
+      </div>
+      <div
+        class="steps__step design mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
         <h3>Design</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
+        <p>Design breathes life into your product. In addition to the aesthetic function, it also ensures that the end user doesn't get lost and quickly completes the actions for which the product is intended.</p>
       </div>
       <div
-        class="steps__step develop mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+        class="steps__step development mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
         <h3>Development</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
-      </div>
-      <div
-        class="steps__step sales mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-        <h3>Sales</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
+        <p>We do not start to develop thoughtlessly. We are looking for the best solutions specifically for your product. Rapid development does not necessarily mean saving time and finance. Exactly the opposite.</p>
       </div>
     </div>
   </div>
